--- a/get.besman.io.tmpl
+++ b/get.besman.io.tmpl
@@ -1,7 +1,6 @@
 #!/bin/bash
-set -x
+#set -x
 #
-# /home/x0vmxn1/.besman/scripts/tmpl/get.besman.io.tmpl
 #___________________________________________________________________________________________
 #
 #
@@ -16,8 +15,6 @@ set -x
 BESMAN_PLATFORM=$(uname)
 RUNAS=$(id -un)
 SCRIPT_NAME=$(basename $0)
-
-
 
 export BESMAN_SERVICE="https://raw.githubusercontent.com"
 
