--- a/get.besman.io.tmpl
+++ b/get.besman.io.tmpl
@@ -18,8 +18,10 @@ SCRIPT_NAME=$(basename $0)
 
 export BESMAN_SERVICE="https://raw.githubusercontent.com"
 
-BESMAN_NAMESPACE="hyperledgerkochi"
-BESMAN_VERSION="0.0.5"
+#BESMAN_NAMESPACE="hyperledgerkochi"
+#BESMAN_VERSION="0.0.5"
+BESMAN_NAMESPACE="mohatte"
+BESMAN_VERSION="0.0.1"
 BESMAN_ENV_REPOS="$BESMAN_NAMESPACE/besman-env-repo"
 # BESMAN_DIST_BRANCH=${BESMAN_DIST_BRANCH:-REL-${BESMAN_VERSION}}
 
